--- a/src/main/webapp/admin/perustiedot/treenit.xhtml
+++ b/src/main/webapp/admin/perustiedot/treenit.xhtml
@@ -61,7 +61,7 @@
 				<h:outputText value="Nimi" />
 				<h:panelGrid>
 					<ace:message for="form:treeninimi" />
-					<h:inputText value="#{treeni.nimi}" id="treeninimi" styleClass="capitalized" />
+					<h:inputText value="#{treeni.nimi}" id="treeninimi" />
 				</h:panelGrid>
 				<h:outputText value="Tyyppi" />
 				<h:panelGrid>
