--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -42,7 +42,7 @@
 						<ui:include src="harrastajat/harrastajat.xhtml" />
 					</ace:tabPane>
 					<ace:tabPane label="Imoittautumiset">
-						<ui:include src="ilmoittautumiset.xhtml" />
+						<ui:include src="ilmoittautumiset/ilmoittautumiset.xhtml" />
 					</ace:tabPane>
 					<ace:tabPane label="Perustiedot">
 						<ui:include src="perustiedot/perustiedot.xhtml" />
