--- a/src/main/webapp/admin/ilmoittautumiset/treenisessiot.xhtml
+++ b/src/main/webapp/admin/ilmoittautumiset/treenisessiot.xhtml
@@ -54,16 +54,14 @@
 			</h:panelGrid>
 		</ace:panel>
 		<ace:panel header="Vetäjät" styleClass="panel" style="width:500px">
-<!-- 		
 			<ace:listControl>
-				<ace:list value="#{vetäjät}" var="_vetäjä" selectionMode="multiple">
+				<ace:list value="#{sessiovetäjät}" var="_vetäjä" selectionMode="multiple">
 					<h:outputText value="#{_vetäjä.nimi}" />
 				</ace:list>
-				<ace:list value="#{treeni.vetäjät}" var="_vetäjä" selectionMode="multiple">
+				<ace:list value="#{treenisessio.vetäjät}" var="_vetäjä" selectionMode="multiple">
 					<h:outputText value="#{_vetäjä.nimi}" />
 				</ace:list>
 			</ace:listControl>
--->			
 		</ace:panel>
 	</h:panelGrid>
 
