--- a/src/main/webapp/admin/ilmoittautumiset/treenikäynnit.xhtml
+++ b/src/main/webapp/admin/ilmoittautumiset/treenikäynnit.xhtml
@@ -14,8 +14,9 @@
 		<ace:ajax render="@form" />
 	</h:commandButton>
 	<ace:dataTable value="#{treenikäynnit}" var="_treenikäynti" selectionMode="single"
-		stateMap="#{ilmoittautumisAdmin.treenikäyntiRSM}" rows="10" rowSelectListener="#{ilmoittautumisAdmin.treenikäyntiValittu}">
-		<ace:column headerText="Aikaleima">
+		stateMap="#{ilmoittautumisAdmin.treenikäyntiRSM}" rows="10"
+		rowSelectListener="#{ilmoittautumisAdmin.treenikäyntiValittu}">
+		<ace:column headerText="Aikaleima" filterBy="#{_treenikäynti.aikaleimaString}" filterMatchMode="contains">
 			<h:outputText value="#{_treenikäynti.aikaleima}">
 				<f:convertDateTime pattern="dd.MM.yyyy HH:mm:ss" timeZone="EET" />
 			</h:outputText>
@@ -23,7 +24,7 @@
 		<ace:column headerText="Päivä">
 			<h:outputText value="#{_treenikäynti.treenisessio.treeni.päivä}" class="teksti" />
 		</ace:column>
-		<ace:column headerText="Harrastaja">
+		<ace:column headerText="Harrastaja" filterBy="#{_treenikäynti.harrastaja.nimi}" filterMatchMode="contains">
 			<h:outputText value="#{_treenikäynti.harrastaja.nimi}" class="teksti" />
 		</ace:column>
 		<ace:column headerText="Vyöarvo">
@@ -52,7 +53,8 @@
 				<h:panelGrid>
 					<ace:message for="form:treenisessio" />
 					<h:selectOneMenu value="#{treenikäynti.treenisessio}" id="treenisessio" style="width:350px">
-						<f:selectItems value="#{kaikkiTreenisessiot}" var="_treenisessio" itemValue="#{_treenisessio}" itemLabel="#{_treenisessio.kuvaus}" />
+						<f:selectItems value="#{kaikkiTreenisessiot}" var="_treenisessio" itemValue="#{_treenisessio}"
+							itemLabel="#{_treenisessio.kuvaus}" />
 						<f:converter converterId="objectConverter" />
 					</h:selectOneMenu>
 				</h:panelGrid>
