--- a/src/main/webapp/admin/raportit.xhtml
+++ b/src/main/webapp/admin/raportit.xhtml
@@ -4,5 +4,6 @@
 	<h:panelGrid>
 		<h:graphicImage value="/kuvat/raportti.jpg" />
 		<h:outputText value="Joku raportti"/>
+		<h:commandButton value="x" action="#{raporttiAdmin.muodostaJäsenkortit}"/>
 	</h:panelGrid>
 </ui:composition>
