--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -15,6 +15,12 @@
 	margin-left: 15px;
 }
 
+.isoikoni {
+	height: 80px;
+	width: 80px;
+	margin-left: 15px;
+}
+
 .tabletop {
 	display: table-cell;
 	vertical-align: top
