--- a/src/main/webapp/admin/raportit.xhtml
+++ b/src/main/webapp/admin/raportit.xhtml
@@ -1,9 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<h:panelGrid>
-		<h:graphicImage value="/kuvat/raportti.jpg" />
-		<h:outputText value="Joku raportti"/>
-		<h:commandButton value="x" action="#{raporttiAdmin.muodostaJäsenkortit}"/>
+	<h:panelGrid columns="2">
+		<h:panelGrid style="margin-right:20px">
+			<h:graphicImage value="/kuvat/jäsenkortit.png" styleClass="isoikoni" />
+			<h:outputText value="Jäsenkortit" />
+		</h:panelGrid>
+		<h:panelGrid>
+			<h:commandLink action="#{raporttiAdmin.muodostaJäsenkortit}">
+				<h:graphicImage value="/kuvat/raportti.jpg" styleClass="isoikoni" />
+			</h:commandLink>
+			<h:outputText value="Joku raportti" />
+		</h:panelGrid>
 	</h:panelGrid>
 </ui:composition>
