--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -42,6 +42,7 @@
 <h:body>
 	<f:view>
 		<h:form id="form">
+			<h:commandButton value="X" action="#{harrastajaAdmin.laskutaSopimukset}"/>
 			<ace:tabSet>
 				<ace:tabPane label="Harrastajat">
 					<ui:include src="harrastajat/harrastajat.xhtml" />
