--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -50,6 +50,9 @@
 				<ace:tabPane label="Imoittautumiset">
 					<ui:include src="ilmoittautumiset/ilmoittautumiset.xhtml" />
 				</ace:tabPane>
+				<ace:tabPane label="Laskut">
+					<ui:include src="laskut/laskut.xhtml" />
+				</ace:tabPane>
 				<ace:tabPane label="Perustiedot">
 					<ui:include src="perustiedot/perustiedot.xhtml" />
 				</ace:tabPane>
