--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -39,7 +39,7 @@
 }
 
 .ui-datatable-odd {
-	background-color: #e0e0e0 !important;
+	background-color: #f0f0f0 !important;
 	background-position-y: -1400px; /* IE7 hack */
 }
 </style>
@@ -63,6 +63,8 @@
 				</ace:tabPane>
 				<ace:tabPane label="Raportit">
 					<ui:include src="raportit.xhtml" />
+				</ace:tabPane>
+				<ace:tabPane label="Loki">
 				</ace:tabPane>
 			</ace:tabSet>
 
