--- a/src/main/webapp/admin/laskut/maksamattomat.xhtml
+++ b/src/main/webapp/admin/laskut/maksamattomat.xhtml
@@ -31,7 +31,7 @@
 			<h:outputText value="#{_lasku.laskurivejä}" />
 		</ace:column>
 		<ace:column headerText="Summa">
-			<h:outputText value="#{_lasku.yhteishinta}">
+			<h:outputText value="#{_lasku.verollinenHinta}">
 				<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
 			</h:outputText>
 		</ace:column>
