--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -55,8 +55,8 @@
 				<ace:tabPane label="Imoittautumiset">
 					<ui:include src="ilmoittautumiset/ilmoittautumiset.xhtml" />
 				</ace:tabPane>
-				<ace:tabPane label="Laskut">
-					<ui:include src="laskut/laskut.xhtml" />
+				<ace:tabPane label="Laskutus">
+					<ui:include src="laskutus/laskutus.xhtml" />
 				</ace:tabPane>
 				<ace:tabPane label="Perustiedot">
 					<ui:include src="perustiedot/perustiedot.xhtml" />
