--- a/src/main/webapp/admin/laskutus/laskutus.xhtml
+++ b/src/main/webapp/admin/laskutus/laskutus.xhtml
@@ -2,17 +2,11 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<ace:tabSet tabChangeListener="#{laskutusAdmin.tabiMuuttui}">
-		<ace:tabPane label="Myöhästyneet">
-			<ui:include src="myöhästyneet.xhtml" />
-		</ace:tabPane>
-		<ace:tabPane label="Maksamattomat">
-			<ui:include src="maksamattomat.xhtml" />
+		<ace:tabPane label="Laskut">
+			<ui:include src="laskut.xhtml" />
 		</ace:tabPane>
 		<ace:tabPane label="Laskuttamattomat">
 			<ui:include src="laskuttamattomat.xhtml" />
-		</ace:tabPane>
-		<ace:tabPane label="Maksetut">
-			<ui:include src="maksetut.xhtml" />
 		</ace:tabPane>
 	</ace:tabSet>
 </ui:composition>
