--- a/src/main/webapp/admin/laskutus/laskut.xhtml
+++ b/src/main/webapp/admin/laskutus/laskut.xhtml
@@ -1,14 +1,15 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
-	<ace:confirmationDialog id="vahvistaLaskunPoisto" message="Oletko varma?" header="Vahvista" width="350"
-		height="200" closable="true" position="center">
+	<ace:confirmationDialog id="vahvistaLaskunPoisto" message="Oletko varma?" header="Vahvista" width="350" height="200"
+		closable="true" position="center">
 		<h:panelGrid columns="2" styleClass="centeredPanelGrid">
 			<h:commandButton value="Kyllä" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').hide()"
 				action="#{laskutusAdmin.piilotaLasku}" actionListener="#{laskutusAdmin.poistaLasku}" />
 			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').hide()" />
 		</h:panelGrid>
-	</ace:confirmationDialog>	<ace:dataTable value="#{laskut}" var="_lasku" selectionMode="single" stateMap="#{laskutusAdmin.laskuRSM}" rows="10"
+	</ace:confirmationDialog>
+	<ace:dataTable value="#{laskut}" var="_lasku" selectionMode="single" stateMap="#{laskutusAdmin.laskuRSM}" rows="10"
 		rowSelectListener="#{laskutusAdmin.laskuValittu}">
 		<ace:column>
 			<ace:expansionToggler />
@@ -51,8 +52,9 @@
 			</h:outputText>
 		</ace:column>
 		<ace:column>
-			<h:outputLink target="_blank" value="#{request.contextPath}/API/blob/lataa/#{_lasku.pdf.id}" rendered="#{_lasku.pdf != null}">
-				<h:graphicImage value="/kuvat/pdf.png" style="width:24px"/>
+			<h:outputLink target="_blank" value="#{request.contextPath}/API/blob/lataa/#{_lasku.pdf.id}"
+				rendered="#{_lasku.pdf != null}">
+				<h:graphicImage value="/kuvat/pdf.png" style="width:24px" />
 			</h:outputLink>
 		</ace:column>
 		<ace:panelExpansion>
@@ -93,6 +95,6 @@
 			</ace:dataTable>
 		</ace:panelExpansion>
 	</ace:dataTable>
-	<h:commandButton rendered="#{lasku != null}" value="x" styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaLaskunPoisto').show();"
-		image="/kuvat/poista.png" immediate="true" />
+	<h:commandButton rendered="#{lasku != null}" value="x" styleClass="ikoni"
+		onclick="ice.ace.instance('form:vahvistaLaskunPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
