--- a/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
+++ b/src/main/webapp/admin/perustiedot/sopimustyypit.xhtml
@@ -8,16 +8,15 @@
 				action="#{perustietoAdmin.piilotaSopimustyyppi}" actionListener="#{perustietoAdmin.poistaSopimustyyppi}" />
 			<h:commandButton value="Ei" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').hide()" />
 		</h:panelGrid>
-	</ace:confirmationDialog>	
+	</ace:confirmationDialog>
 	<h:panelGrid>
 		<h:commandButton action="#{perustietoAdmin.lisääSopimustyyppi}" value="x" styleClass="ikoni" image="/kuvat/lisää.png"
 			immediate="true">
 			<ace:ajax render="@form" />
 		</h:commandButton>
-		<h:panelGrid columns="3" columnClasses="tabletop, tabletop, tabletop">
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<ace:dataTable value="#{kaikkiSopimustyypit}" var="_sopimustyyppi" selectionMode="single" rows="10"
-				rowSelectListener="#{perustietoAdmin.sopimustyyppiValittu}"
-				stateMap="#{perustietoAdmin.sopimustyyppiRSM}">
+				rowSelectListener="#{perustietoAdmin.sopimustyyppiValittu}" stateMap="#{perustietoAdmin.sopimustyyppiRSM}">
 				<ace:column headerText="Nimi">
 					<h:outputText value="#{_sopimustyyppi.nimi}" />
 				</ace:column>
@@ -53,10 +52,40 @@
 				</ace:column>
 				<ace:column headerText="Maksuväli">
 					<h:outputText value="#{_sopimustyyppi.oletusMaksuväli}" />
-				</ace:column>			
+				</ace:column>
+				<ace:column headerText="Laskutettava">
+					<h:graphicImage value="/kuvat/valittu.png" rendered="#{_sopimustyyppi.laskutettava}" />
+				</ace:column>
+				<ace:column headerText="Tuotekoodi">
+					<h:outputText value="#{_sopimustyyppi.tuotekoodi}" />
+				</ace:column>
+				<ace:column headerText="Hinta">
+					<h:outputText value="#{_sopimustyyppi.hinta}" />
+				</ace:column>
+				<ace:column headerText="Määrä">
+					<h:outputText value="#{_sopimustyyppi.määrä}" />
+				</ace:column>
+				<ace:column headerText="Yksikkö">
+					<h:outputText value="#{_sopimustyyppi.yksikkö}" />
+				</ace:column>
+				<ace:column headerText="Verokanta">
+					<h:outputText value="#{_sopimustyyppi.verokanta}" />
+				</ace:column>
 			</ace:dataTable>
+			<ace:panel header="Käyttö (#{fn:length(sopimustyyppiKäyttö)})" style="width:200px"
+				rendered="#{sopimustyyppi != null and sopimustyyppi.poistettavissa}">
+				<ace:dataTable value="#{sopimustyyppiKäyttö}" var="_sopimus" rows="10"
+					rendered="#{fn:length(sopimustyyppiKäyttö) > 0}">
+					<ace:column>
+						<h:outputText value="#{_sopimus.tyyppi.nimi}" />
+					</ace:column>
+				</ace:dataTable>
+				<h:outputText value="Ei käytössä" rendered="#{fn:length(sopimustyyppiKäyttö) == 0}" />
+			</ace:panel>
+		</h:panelGrid>
+		<h:panelGrid columns="2" columnClasses="tabletop, tabletop">
 			<h:panelGrid style="margin-left:20px">
-				<ace:panel header="Rooli" rendered="#{sopimustyyppi != null}" >
+				<ace:panel header="Perustiedot" rendered="#{sopimustyyppi != null}">
 					<h:panelGrid columns="2">
 						<h:outputText value="Nimi" />
 						<h:panelGrid>
@@ -113,11 +142,6 @@
 							<ace:message for="form:oleuskerrrat" />
 							<h:inputText value="#{sopimustyyppi.oletusTreenikerrat}" id="oletuskerrat" />
 						</h:panelGrid>
-						<h:outputText value="Oletusmaksuväli" />
-						<h:panelGrid>
-							<ace:message for="form:oletusmaksuväli" />
-							<h:inputText value="#{sopimustyyppi.oletusMaksuväli}" id="oletusmaksuväli" />
-						</h:panelGrid>
 					</h:panelGrid>
 				</ace:panel>
 				<h:panelGrid columns="3">
@@ -130,18 +154,48 @@
 						<f:ajax render="@form" />
 					</h:commandButton>
 					<h:commandButton rendered="#{sopimustyyppi.poistettavissa and fn:length(sopimustyyppiKäyttö) == 0}" value="x"
-						styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();" image="/kuvat/poista.png" immediate="true" />
+						styleClass="ikoni" onclick="ice.ace.instance('form:vahvistaSopimustyypinPoisto').show();"
+						image="/kuvat/poista.png" immediate="true" />
 				</h:panelGrid>
 			</h:panelGrid>
-			<ace:panel header="Käyttö (#{fn:length(sopimustyyppiKäyttö)})" style="width:200px"
-				rendered="#{sopimustyyppi != null and sopimustyyppi.poistettavissa}">
-				<ace:dataTable value="#{sopimustyyppiKäyttö}" var="_sopimus" rows="10"
-					rendered="#{fn:length(sopimustyyppiKäyttö) > 0}">
-					<ace:column>
-						<h:outputText value="#{_sopimus.tyyppi.nimi}" />
-					</ace:column>
-				</ace:dataTable>
-				<h:outputText value="Ei käytössä" rendered="#{fn:length(sopimustyyppiKäyttö) == 0}" />
+			<ace:panel header="Laskutustiedot" rendered="#{sopimustyyppi != null}">
+				<h:panelGrid columns="2">
+					<h:outputText value="Laskutettava" />
+					<h:panelGrid>
+						<ace:message for="form:laskutettava" />
+						<h:selectBooleanCheckbox value="#{sopimustyyppi.laskutettava}" id="laskutettava" />
+					</h:panelGrid>
+					<h:outputText value="Tuotekoodi" />
+					<h:panelGrid>
+						<ace:message for="form:tuotekoodi" />
+						<h:inputText value="#{sopimustyyppi.tuotekoodi}" id="tuotekoodi" />
+					</h:panelGrid>
+					<h:outputText value="Hinta" />
+					<h:panelGrid>
+						<ace:message for="form:hinta" />
+						<h:inputText value="#{sopimustyyppi.hinta}" id="hinta" />
+					</h:panelGrid>
+					<h:outputText value="Määrä" />
+					<h:panelGrid>
+						<ace:message for="form:määrä" />
+						<h:inputText value="#{sopimustyyppi.määrä}" id="määrä" />
+					</h:panelGrid>
+					<h:outputText value="Yksikkö" />
+					<h:panelGrid>
+						<ace:message for="form:yksikkö" />
+						<h:inputText value="#{sopimustyyppi.yksikkö}" id="yksikkö" />
+					</h:panelGrid>
+					<h:outputText value="Verokanta" />
+					<h:panelGrid>
+						<ace:message for="form:verokanta" />
+						<h:inputText value="#{sopimustyyppi.verokanta}" id="verokanta" />
+					</h:panelGrid>
+					<h:outputText value="Oletusmaksuväli" />
+					<h:panelGrid>
+						<ace:message for="form:oletusmaksuväli" />
+						<h:inputText value="#{sopimustyyppi.oletusMaksuväli}" id="oletusmaksuväli" />
+					</h:panelGrid>
+				</h:panelGrid>
 			</ace:panel>
 		</h:panelGrid>
 	</h:panelGrid>
