--- a/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
+++ b/src/main/webapp/admin/harrastajat/vyökokeet.xhtml
@@ -44,7 +44,7 @@
 					value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).aikaString}" />
 				<h:outputText value="Treenikertoja" />
 				<h:outputText
-					value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja}" />
+					value="#{harrastajaAdmin.laskeJäljelläVyökokeeseen(_vyökoe.vyöarvo).treenikertoja} kertaa" />
 			</h:panelGrid>
 		</ace:column>
 	</ace:dataTable>
